Se mejora excepciones en rest