@@ -15,6 +15,7 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class CuentaServiceImpl implements ICunetaServiceImpl {
@@ -30,71 +31,56 @@ public class CuentaServiceImpl implements ICunetaServiceImpl {
 
     @Override
     public boolean save(CuentaRequestDTO cuentaRequestDTO) {
-        Cuenta cuentaReq = cuentaRepository.findByNumero(cuentaRequestDTO.getNumero());
-        if (cuentaReq != null) {
-            throw new CuentaYaExisteException("El número de cuenta debe ser único");
-        } else {
-            if(cuentaRequestDTO.getIdentificacion() != null){
-                ClienteDTO clienteDTO = clienteClient.getCliente(cuentaRequestDTO.getIdentificacion());
-                if (clienteDTO != null) {
-                    Cuenta cuenta = cuentaMappers.toCuenta(cuentaRequestDTO);
-                    cuenta.setClienteId(clienteDTO.getId().toString());
-                    cuentaRepository.save(cuenta);
-                    return true;
-                } else {
-                    throw new CuentaNotFoundException("Cliente no encontrado");
-                }
-            }else{
-                throw new CuentaNotFoundException("Identificacion es requerida");
-            }
+        if (cuentaRequestDTO.getNumero() == null || cuentaRequestDTO.getIdentificacion() == null) {
+            throw new CuentaNotFoundException("Número de cuenta e identificación son requeridos");
         }
+        if (cuentaRepository.existsByNumero(cuentaRequestDTO.getNumero())) {
+            throw new CuentaYaExisteException("El número de cuenta debe ser único");
+        }
+        ClienteDTO clienteDTO = clienteClient.getCliente(cuentaRequestDTO.getIdentificacion());
+        if (clienteDTO == null) {
+            throw new CuentaNotFoundException("Cliente no encontrado");
+        }
+        Cuenta cuenta = cuentaMappers.toCuenta(cuentaRequestDTO);
+        cuenta.setClienteId(clienteDTO.getId().toString());
+        cuentaRepository.save(cuenta);
+        return true;
     }
 
     @Override
     public boolean update(Long id, CuentaDTO cuentaDTO) {
-        Optional<Cuenta> clienteOptional = cuentaRepository.findById(id);
-        if (clienteOptional.isEmpty()) {
-            throw new CuentaNotFoundException("No existe la cuenta con el ID:  " + id);
-        } else {
-            Cuenta cuenta = clienteOptional.get();
-            cuenta.setTipoCuenta(cuentaDTO.getTipoCuenta());
-            cuenta.setEstado(cuentaDTO.isEstado());
-            cuentaRepository.save(cuenta);
-        }
+        Cuenta cuenta = cuentaRepository.findById(id)
+                .orElseThrow(() -> new CuentaNotFoundException("No existe la cuenta con el ID: " + id));
+        cuenta.setTipoCuenta(cuentaDTO.getTipoCuenta());
+        cuenta.setEstado(cuentaDTO.isEstado());
+        cuentaRepository.save(cuenta);
+
         return true;
     }
 
     @Override
     public boolean delete(Long id) {
-        Optional<Cuenta> clienteOptional = cuentaRepository.findById(id);
-        if (clienteOptional.isEmpty()) {
-            throw new CuentaNotFoundException("Cuenta no encontrada con ID: " + id);
-        } else {
-            cuentaRepository.deleteById(id);
-            return true;
-        }
+        cuentaRepository.findById(id)
+                .orElseThrow(() -> new CuentaNotFoundException("Cuenta no encontrada con ID: " + id));
+        cuentaRepository.deleteById(id);
+        return true;
     }
 
     @Override
     public List<CuentaDTO> cuentaDtos() {
-        List<Cuenta> cuentas = cuentaRepository.findAll();
-        List<Cuenta> cuentasDetalles = new ArrayList<>();
-        if(!cuentas.isEmpty()){
-            for (Cuenta cuenta : cuentas) {
-                ClienteDTO cliente = clienteClient.getClienteById(Long.parseLong(cuenta.getClienteId()));
-                cuenta.setClienteId(cliente.getNombre());
-                cuentasDetalles.add(cuenta);
-            }
-        }
-        return cuentasDetalles.stream()
+        return cuentaRepository.findAll().stream()
+                .peek(cuenta -> {
+                    ClienteDTO cliente = clienteClient.getClienteById(Long.parseLong(cuenta.getClienteId()));
+                    cuenta.setClienteId(cliente.getNombre());
+                })
                 .map(cuentaMappers::toCuentaDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public CuentaDTO findById(Long id) {
         Cuenta cuenta = cuentaRepository.findById(id)
-                .orElseThrow(() -> new CuentaNotFoundException("Cuenta no encontrado con ID: " + id));
+                .orElseThrow(() -> new CuentaNotFoundException("Cuenta no encontrada con ID: " + id));
         ClienteDTO clienteDTO = clienteClient.getClienteById(Long.parseLong(cuenta.getClienteId()));
         cuenta.setClienteId(clienteDTO.getNombre());
         return cuentaMappers.toCuentaDTO(cuenta);
